--- a/packages/corsair/tsconfig.json
+++ b/packages/corsair/tsconfig.json
@@ -28,6 +28,7 @@
     "core/**/*",
     "watch/**/*",
     "client/**/*",
+    "cli/**/*",
     "adapters/nextjs.ts",
     "adapters/express.ts",
     "schema/**/*"
