--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "corsair": "./dist/cli/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
