more tweaks and a new lite nextjs package

--- a/packages/corsair/tsconfig.json
+++ b/packages/corsair/tsconfig.json
@@ -31,7 +31,8 @@
     "cli/**/*",
     "adapters/nextjs.ts",
     "adapters/express.ts",
-    "schema/**/*"
+    "schema/**/*",
+    "trpc/**/*"
   ],
   "exclude": ["node_modules", "dist"]
 }
