--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "corsair": "./dist/watch/index.js"
+    "corsair": "./dist/cli/index.js"
   },
   "scripts": {
     "build-watch": "tsc --watch",
