--- a/packages/corsair/tsconfig.json
+++ b/packages/corsair/tsconfig.json
@@ -26,7 +26,7 @@
     "api/**/*",
     "scripts/**/*",
     "core/**/*",
-    "watch/**/*",
+    // "watch/**/*",
     "client/**/*",
     "cli/**/*",
     "adapters/nextjs.ts",
