--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -101,9 +101,10 @@
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
     "chokidar": "^4.0.3",
-    "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.6",
-    "drizzle-zod": "^0.8.3",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.2",
+    "drizzle-zod": "^0.5.1",
+    "prettier": "^3.3.2",
     "ink": "^6.3.1",
     "ink-spinner": "^5.0.0",
     "ink-text-input": "^6.0.0",
@@ -118,17 +119,20 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.0.0",
-    "@types/express": "^4.0.0",
+    "@types/express": "^4.17.21",
     "@types/madge": "^5.0.3",
-    "@types/node": "^22.18.11",
+    "@types/node": "^20.14.2",
     "@types/pg": "^8.15.5",
     "@types/react": "^19.2.2",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
-    "drizzle-kit": "^0.31.5",
-    "express": "^4.0.0",
-    "fastify": "^4.0.0",
-    "hono": "^3.0.0",
+    "@types/prettier": "^3.0.0",
+    "bun-types": "latest",
+    "drizzle-kit": "^0.22.7",
+    "eslint": "^8.57.0",
+    "express": "^4.19.2",
+    "fastify": "^4.28.0",
+    "hono": "^4.4.7",
     "next": "15.5.6",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
