remove drizzle from corsair and pass to corsair instead

--- a/packages/corsair/tsconfig.json
+++ b/packages/corsair/tsconfig.json
@@ -25,7 +25,7 @@
     "db/**/*",
     "api/**/*",
     "scripts/**/*",
-    "client/**/*",
+    // "client/**/*",
     "cli/**/*",
     "schema/**/*",
     "trpc/**/*",
