--- a/demo/nextjs/package.json
+++ b/demo/nextjs/package.json
@@ -7,6 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
     "corsair:generate": "corsair generate",
     "corsair:check": "corsair check",
     "corsair:migrate": "corsair migrate"
@@ -22,15 +26,20 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
+    "pg": "^8.11.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "server-only": "^0.0.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "drizzle-orm": "^0.31.2",
+    "drizzle-zod": "^0.5.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "drizzle-kit": "^0.22.7",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.11.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
