--- a/packages/corsair/docker-compose.yml
+++ b/packages/corsair/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   postgres:
@@ -9,30 +9,30 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
     ports:
-      - "5433:5432"
+      - '5433:5432'
     volumes:
       - postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 5s
       timeout: 5s
       retries: 5
 
-  postgrest:
-    image: postgrest/postgrest:latest
-    container_name: corsair-postgrest
-    environment:
-      PGRST_DB_URI: postgres://postgres:password@postgres:5432/postgres-studio
-      PGRST_DB_SCHEMA: public
-      PGRST_DB_ANON_ROLE: postgres
-      PGRST_OPENAPI_SERVER_PROXY_URI: http://localhost:3000
-      PGRST_DB_SCHEMAS: public
-      PGRST_DB_EXTRA_SEARCH_PATH: public
-    ports:
-      - "3000:3000"
-    depends_on:
-      postgres:
-        condition: service_healthy
+  # postgrest:
+  #   image: postgrest/postgrest:latest
+  #   container_name: corsair-postgrest
+  #   environment:
+  #     PGRST_DB_URI: postgres://postgres:password@postgres:5432/postgres-studio
+  #     PGRST_DB_SCHEMA: public
+  #     PGRST_DB_ANON_ROLE: postgres
+  #     PGRST_OPENAPI_SERVER_PROXY_URI: http://localhost:3000
+  #     PGRST_DB_SCHEMAS: public
+  #     PGRST_DB_EXTRA_SEARCH_PATH: public
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
 
 volumes:
   postgres-data:
