--- a/demo/nextjs/package.json
+++ b/demo/nextjs/package.json
@@ -13,7 +13,8 @@
     "db:studio": "drizzle-kit studio",
     "corsair:generate": "corsair generate",
     "corsair:check": "corsair check",
-    "corsair:migrate": "corsair migrate"
+    "corsair:migrate": "corsair migrate",
+    "log": "tsx corsair/operations.ts"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -24,6 +25,8 @@
     "clsx": "^2.1.1",
     "corsair": "link:../../packages/corsair",
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.31.2",
+    "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "pg": "^8.11.0",
@@ -31,17 +34,16 @@
     "react-dom": "19.1.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
-    "drizzle-orm": "^0.31.2",
-    "drizzle-zod": "^0.5.1"
+    "tsx": "^4.20.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "drizzle-kit": "^0.22.7",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pg": "^8.11.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.22.7",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "tailwindcss": "^4",
