postgres + drizzle support and we are starting plugins now

--- a/demo/nextjs-drizzle/package.json
+++ b/demo/nextjs-drizzle/package.json
@@ -15,7 +15,7 @@
     "corsair:generate": "corsair generate",
     "corsair:check": "corsair check",
     "corsair:migrate": "corsair migrate",
-    "log": "tsx corsair/operations.ts"
+    "config": "tsx corsair.config.ts"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
