--- a/demo/nextjs-drizzle/package.json
+++ b/demo/nextjs-drizzle/package.json
@@ -35,7 +35,8 @@
     "react-dom": "19.1.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
-    "tsx": "^4.20.6"
+    "tsx": "^4.20.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
