--- a/demo/nextjs-drizzle/tsconfig.json
+++ b/demo/nextjs-drizzle/tsconfig.json
@@ -20,6 +20,7 @@
     ],
     "paths": {
       "@/*": ["./*"],
+      "@/corsair": ["./corsair/*"],
       "corsair/*": ["../../packages/corsair/*"]
     }
   },
