--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -42,15 +42,18 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.1",
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.68",
     "@supabase/postgrest-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
     "dotenv": "^16.4.5",
+    "openai": "^4.103.0",
+    "pg": "^8.16.3",
     "superjson": "^2.2.3",
-    "zod": "^3.23.8",
-    "openai": "^4.103.0"
+    "tsx": "^4.20.6",
+    "zod": "^3.23.8"
   },
   "peerDependencies": {
     "drizzle-orm": ">=0.28.0",
@@ -65,34 +68,35 @@
     }
   },
   "devDependencies": {
-    "tsx": "^4.20.6",
-    "prettier": "^3.3.2",
-    "boxen": "^8.0.1",
-    "chalk": "^5.6.2",
-    "chokidar": "^4.0.3",
-    "ink": "^6.3.1",
-    "ink-spinner": "^5.0.0",
-    "ink-text-input": "^6.0.0",
-    "madge": "^8.0.0",
-    "ts-morph": "^27.0.2",
-    "ai": "^5.0.93",
     "@cloudflare/workers-types": "^4.0.0",
     "@types/express": "^4.17.21",
     "@types/madge": "^5.0.3",
     "@types/node": "^20.14.2",
     "@types/pg": "^8.15.5",
+    "@types/prettier": "^3.0.0",
     "@types/react": "^19.2.2",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
-    "@types/prettier": "^3.0.0",
+    "ai": "^5.0.93",
+    "boxen": "^8.0.1",
     "bun-types": "latest",
+    "chalk": "^5.6.2",
+    "chokidar": "^4.0.3",
+    "commander": "^12.1.0",
     "eslint": "^8.57.0",
     "express": "^4.19.2",
     "fastify": "^4.28.0",
     "hono": "^4.4.7",
+    "ink": "^6.3.1",
+    "ink-spinner": "^5.0.0",
+    "ink-text-input": "^6.0.0",
+    "madge": "^8.0.0",
     "next": "15.5.6",
+    "prettier": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
+    "ts-morph": "^27.0.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "^2.1.8"
   }
