--- a/packages/corsair/tsconfig.json
+++ b/packages/corsair/tsconfig.json
@@ -1,32 +1,9 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "jsx": "react-jsx",
-    "types": ["node"],
-    "typeRoots": ["./node_modules/@types"],
-    "moduleResolution": "bundler",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "downlevelIteration": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "outDir": "./dist",
-    "rootDir": "."
+    "lib": ["esnext", "dom", "dom.iterable"],
+    "types": ["node", "bun"],
+    "jsx": "react-jsx"
   },
-  "include": [
-    "index.ts",
-    "api/**/*",
-    "scripts/**/*",
-    "cli/**/*",
-    "trpc/**/*",
-    "core/**/*"
-  ],
-  "exclude": ["node_modules", "dist"]
+  "references": []
 }
