--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,7 @@
     "noErrorTruncation": true,
     "composite": true,
     "declaration": true,
+    "declarationMap": true,
     "emitDeclarationOnly": true,
     "types": ["node", "bun"],
     // Put the .d.ts files output and cache file (tsbuildinfo) in a directory
