--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "fumadocs-core": "^15.2.1",
+    "fumadocs-mdx": "^14.0.3",
     "fumadocs-ui": "^15.2.1",
     "next": "15.5.6",
     "react": "19.1.0",
