--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -178,6 +178,7 @@
     "zod": "^3.23.8"
   },
   "peerDependencies": {
+    "@slack/web-api": "^7.0.0",
     "@tanstack/react-query": "^5.0.0",
     "@trpc/client": "^11.0.0",
     "@trpc/server": "^11.0.0",
@@ -189,6 +190,7 @@
     "react-dom": "^18.0.0 || ^19.0.0"
   },
   "peerDependenciesOptional": {
+    "@slack/web-api": "*",
     "@tanstack/react-query": "*",
     "@trpc/client": "*",
     "@trpc/server": "*",
@@ -200,6 +202,9 @@
     "react-dom": "*"
   },
   "peerDependenciesMeta": {
+    "@slack/web-api": {
+      "optional": true
+    },
     "@tanstack/react-query": {
       "optional": true
     },
