--- a/docs/package.json
+++ b/docs/package.json
@@ -18,6 +18,7 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
