refactor: reorganize CLI structure by removing deprecated generate and migrate commands, updating import paths, and introducing a new operation module for improved functionality and maintainability

--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -34,7 +34,7 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
-    "watch": "tsx cli/watch/index.tsx",
+    "watch": "tsx watch/index.tsx",
     "agent-test": "tsx llm/agent/tests/agent-prompt.ts"
   },
   "main": "./dist/index.js",
