--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "corsair",
+  "name": "corsair-dev",
   "version": "0.1.0",
   "description": "The TypeScript Vibe Coding SDK",
   "type": "module",
