--- a/demo/nextjs-prisma/package.json
+++ b/demo/nextjs-prisma/package.json
@@ -18,6 +18,7 @@
     "config": "tsx corsair.config.ts"
   },
   "dependencies": {
+    "@corsair-ai/core": "workspace:^",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
