--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -26,14 +26,21 @@
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "bin": {
-    "corsair": "./dist/cli/index.js"
+    "create-corsair": "./dist/cli/index.js"
   },
   "dependencies": {
-    "@corsair-ai/core": "^0.1.0"
+    "@corsair-ai/core": "^0.1.0",
+    "commander": "^12.1.0",
+    "inquirer": "^11.1.0",
+    "chalk": "^5.4.0",
+    "ora": "^8.1.1",
+    "execa": "^9.5.1",
+    "fs-extra": "^11.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
-    "commander": "^12.1.0",
+    "@types/inquirer": "^9.0.7",
+    "@types/fs-extra": "^11.0.4",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
