more work on the initialize package

--- a/biome.json
+++ b/biome.json
@@ -81,7 +81,8 @@
       "!**/dev/cloudflare/drizzle",
       "!**/playwright-report",
       "!**/.output",
-      "!**/.tmp"
+      "!**/.tmp",
+      "!**/packages/create/template/**"
     ]
   }
 }
