--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -1,58 +1,44 @@
 {
-  "name": "create-t3-app",
-  "version": "7.40.0",
-  "description": "Create web application with the t3 stack",
+  "name": "@corsair-ai/create",
+  "version": "0.1.0",
+  "description": "The Project Generator for Corsair",
+  "type": "module",
   "license": "MIT",
+  "homepage": "https://corsair.dev",
   "repository": {
     "type": "git",
-    "url": "https://github.com/t3-oss/create-t3-app.git",
-    "directory": "cli"
+    "url": "https://github.com/corsairdev/corsair",
+    "directory": "packages/create"
   },
   "keywords": [
-    "create-t3-app",
-    "init.tips",
-    "next.js",
-    "t3-stack",
-    "tailwind",
-    "tRPC",
-    "typescript"
+    "typescript",
+    "corsair",
+    "initialize",
+    "project"
   ],
-  "type": "module",
-  "exports": "./dist/index.js",
-  "bin": {
-    "create-t3-app": "./dist/index.js"
-  },
-  "files": [
-    "dist",
-    "template",
-    "README.md",
-    "LICENSE",
-    "CHANGELOG.md",
-    ".yarnrc.yml",
-    "package.json"
-  ],
-  "engines": {
-    "node": ">=18.17.0"
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "typecheck": "tsc",
     "build": "tsup",
+    "build:watch": "tsup --watch",
     "dev": "tsup --watch",
     "clean": "rm -rf dist .turbo node_modules",
-    "start": "node dist/index.js",
-    "lint": "eslint",
-    "lint:fix": "pnpm lint --fix",
-    "format": "prettier '**/*.{cjs,mjs,ts,tsx,md,json}' --ignore-path .gitignore --ignore-unknown --no-error-on-unmatched-pattern --write",
-    "format:check": "prettier '**/*.{cjs,mjs,ts,tsx,md,json}' --ignore-path .gitignore --ignore-unknown --no-error-on-unmatched-pattern --check",
-    "release": "changeset version",
-    "pub:beta": "pnpm build && npm publish --tag beta",
-    "pub:next": "pnpm build && npm publish --tag next",
-    "pub:release": "pnpm build && npm publish"
+    "start": "node dist/index.js"
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "exports": "./dist/index.js",
+  "bin": {
+    "create-corsair": "./dist/index.js"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   },
   "dependencies": {
     "@clack/core": "^0.3.4",
     "@clack/prompts": "^0.6.3",
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "chalk": "5.2.0",
     "commander": "^10.0.1",
     "execa": "^7.2.0",
@@ -82,7 +68,6 @@
     "better-auth": "^1.3",
     "drizzle-kit": "^0.30.5",
     "drizzle-orm": "^0.41.0",
-    "mysql2": "^3.11.0",
     "next": "^15.5.6",
     "next-auth": "^4.24.7",
     "postgres": "^3.4.4",
@@ -97,5 +82,11 @@
     "type-fest": "^3.13.1",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
-  }
+  },
+  "packageManager": "pnpm@10.11.1",
+  "files": [
+    "dist",
+    "template",
+    ".yarnrc.yml"
+  ]
 }
