--- a/.github/workflows/deploy-create.yml
+++ b/.github/workflows/deploy-create.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Sync corsair package versions
+        run: pnpm --filter @corsair-ai/create sync:versions
+
       - name: Build packages
         run: pnpm run build
 
