--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -25,7 +25,8 @@
     "build:watch": "tsup --watch",
     "dev": "tsup --watch",
     "clean": "rm -rf dist .turbo node_modules",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "sync:versions": "tsx scripts/sync-corsair-versions.ts"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -79,6 +80,7 @@
     "superjson": "^2.2.1",
     "tailwindcss": "^4.0.15",
     "tsup": "^6.7.0",
+    "tsx": "^4.20.6",
     "type-fest": "^3.13.1",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
