--- a/packages/create/template/base/package.json
+++ b/packages/create/template/base/package.json
@@ -17,22 +17,28 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "corsair:generate": "corsair generate",
+    "corsair:check": "corsair check",
+    "corsair:migrate": "corsair migrate"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
-    "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@trpc/tanstack-react-query": "^11.0.0",
     "better-auth": "^1.3",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.41.0",
+    "drizzle-zod": "^0.5.1",
     "next": "^15.5.6",
     "postgres": "^3.4.4",
     "react": "^19.1.2",
     "react-dom": "^19.1.2",
+    "@corsair-ai/core": "^0.1.0",
+    "dotenv": "^17.2.3",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
@@ -44,6 +50,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "~19.1.0",
     "@types/react-dom": "~19.1.0",
+    "@corsair-ai/cli": "^0.1.0",
     "drizzle-kit": "^0.30.5",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
