--- a/packages/create/template/base/tsconfig.json
+++ b/packages/create/template/base/tsconfig.json
@@ -27,7 +27,8 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/corsair": ["./src/corsair/*"]
     }
   },
   "include": [
