--- a/demo/nextjs-drizzle/package.json
+++ b/demo/nextjs-drizzle/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@corsair-ai/cli": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pg": "^8.11.0",
