--- a/biome.json
+++ b/biome.json
@@ -5,6 +5,11 @@
     "enabled": true,
     "indentStyle": "tab"
   },
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "single"
+    }
+  },
   "css": {
     "parser": {
       "tailwindDirectives": true
