--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@corsair-ai/core",
-  "version": "0.1.0",
+  "version": "0.1.0-beta.1",
   "description": "The TypeScript Vibe Coding SDK",
   "type": "module",
   "license": "MIT",
