--- a/packages/create/template/base/package.json
+++ b/packages/create/template/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "template",
-  "version": "0.1.0",
+  "version": "0.1.0-beta.1",
   "type": "module",
   "private": true,
   "scripts": {
@@ -14,6 +14,8 @@
     "check": "next lint && tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "db:start": "./postgres.sh",
+    "db:stop": "./postgres-stop.sh",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
