--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -30,10 +30,14 @@
   "dependencies": {
     "@corsair-ai/core": "workspace:*",
     "@ai-sdk/openai": "^2.0.68",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@inquirer/prompts": "^7.0.1",
     "ai": "^5.0.93",
+    "c12": "^3.2.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
+    "jiti": "^2.6.0",
     "openai": "^4.103.0",
     "prettier": "^3.3.2",
     "ts-morph": "^27.0.2",
