--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -12,6 +12,6 @@
     "skipLibCheck": true
   },
   "include": ["./**/*"],
-  "exclude": ["dist", "node_modules"],
+  "exclude": ["dist", "node_modules", "sandbox/**/*"],
   "references": []
 }
