feat: add Slack webhook handler with event processing, including new event types and testing framework for enhanced integration

--- a/demo/sdk/slack/tsconfig.json
+++ b/demo/sdk/slack/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "commonjs",
+    "moduleResolution": "node",
     "lib": ["ES2020", "DOM"],
     "strict": true,
     "esModuleInterop": true,
@@ -16,6 +16,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
   },
   "include": [
     "*.ts",
