--- a/demo/sdk/github/package.json
+++ b/demo/sdk/github/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "zod": "^3.22.4"
   }
 }
 
