--- a/demo/sdk/gmail/package.json
+++ b/demo/sdk/gmail/package.json
@@ -26,8 +26,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "googleapis": "^169.0.0",
-    "node-fetch": "^2.7.0"
+    "@googleapis/gmail": "^2.0.0",
+    "google-auth-library": "^9.0.0",
+    "node-fetch": "^2.7.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
