--- a/demo/sdk/linear/package.json
+++ b/demo/sdk/linear/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "@linear/sdk": "^24.0.0",
     "express": "^4.18.2",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
