feat: add database schema definitions for GitHub and Linear entities in Corsair; update CLI package.json to include corsair dependency and streamline config loading

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@corsair-ai/core": "workspace:*",
+    "corsair": "workspace:*",
     "@ai-sdk/openai": "^2.0.68",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
