fix: update biome.json to correct pnpm-store exclusion pattern

--- a/biome.json
+++ b/biome.json
@@ -88,7 +88,8 @@
       "!**/.output",
       "!**/.tmp",
       "!**/packages/create/template/**",
-      "!**/pnpm-store/**"
+      "!**/.pnpm-store/**",
+      "!**/demo/sdk/**"
     ]
   }
 }
