chore: update package references in pnpm-lock.yaml and package.json to use workspace protocol for corsair; adjust tsconfig paths for improved module resolution

--- a/demo/nextjs-drizzle/tsconfig.json
+++ b/demo/nextjs-drizzle/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/*": ["./*"],
       "@/corsair": ["./corsair/*"],
-      "corsair/*": ["../../packages/corsair/*"]
+      "corsair": ["../../packages/corsair/src/index.ts"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
