--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -42,10 +42,20 @@
       "types": "./dist/adapters/prisma/index.d.ts",
       "default": "./dist/adapters/prisma/index.js"
     },
+    "./plugins": {
+      "dev-source": "./plugins/index.ts",
+      "types": "./dist/plugins/index.d.ts",
+      "default": "./dist/plugins/index.js"
+    },
     "./plugins/slack": {
       "dev-source": "./plugins/slack/index.ts",
       "types": "./dist/plugins/slack/index.d.ts",
       "default": "./dist/plugins/slack/index.js"
+    },
+    "./plugins/linear": {
+      "dev-source": "./plugins/linear/index.ts",
+      "types": "./dist/plugins/linear/index.d.ts",
+      "default": "./dist/plugins/linear/index.js"
     }
   },
   "scripts": {
@@ -57,6 +67,7 @@
   },
   "dependencies": {
     "c12": "^3.3.2",
+    "dotenv": "^16.3.1",
     "jiti": "^2.6.1",
     "zod": "^3.25.76"
   },
@@ -111,7 +122,6 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^24.10.1",
-    "dotenv": "^16.3.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
