--- a/demo/corsair-plugins/package.json
+++ b/demo/corsair-plugins/package.json
@@ -10,15 +10,18 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "start": "tsx src/index.ts",
-    "test": "tsx src/test.ts"
+    "test": "tsx src/test.ts",
+    "webhook:server": "tsx src/webhook-server.ts --watch"
   },
   "dependencies": {
     "corsair": "workspace:*",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.5",
+    "express": "^4.18.2",
     "pg": "^8.12.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.2",
     "drizzle-kit": "^0.31.8",
