fix tsconfig and root tsconfig for composite and incremental

--- a/packages/corsair/tsconfig.json
+++ b/packages/corsair/tsconfig.json
@@ -8,8 +8,8 @@
     "moduleResolution": "Bundler",
     "outDir": "./dist",
     "rootDir": "./",
-    "composite": false,
-    "incremental": false,
+    "composite": true,
+    "incremental": true,
     "emitDeclarationOnly": false,
     "declaration": true,
     "declarationMap": true,
