--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "./tsconfig.base.json",
-  "composite": true,
+  "compilerOptions": {
+    "composite": true
+  },
   "include": [
     // Only include files that are in the root directory. All other files are included by the references.
     "./*.ts",
