--- a/biome.json
+++ b/biome.json
@@ -47,7 +47,7 @@
       },
       "nursery": {
         "noMisusedPromises": "error",
-        "noFloatingPromises": "error"
+        "noFloatingPromises": "off"
       }
     }
   },
