--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -141,7 +141,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "packageManager": "pnpm@10.20.0",
   "files": [
     "dist"
