fix corsair demo package names

--- a/demo/corsair-fly/package.json
+++ b/demo/corsair-fly/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@corsair/demo-drizzle-pg-slack",
+  "name": "@corsair/demo-fly",
   "private": true,
   "type": "module",
   "scripts": {
