update fly.toml and dockerfile

--- a/demo/corsair-fly/Dockerfile
+++ b/demo/corsair-fly/Dockerfile
@@ -3,26 +3,35 @@
 # Base stage for all other stages
 FROM node:20-alpine AS base
 RUN apk add --no-cache libc6-compat
+RUN corepack enable && corepack prepare pnpm@latest --activate
 WORKDIR /app
 
 # Dependencies stage
 FROM base AS deps
-# Copy package files
-COPY package.json package-lock.json* ./
-RUN npm ci
+# Copy workspace files
+COPY pnpm-workspace.yaml package.json pnpm-lock.yaml ./
+COPY packages ./packages
+COPY demo/corsair-fly ./demo/corsair-fly
+# Install dependencies for the entire workspace
+RUN pnpm install --frozen-lockfile --filter=@corsair/demo-fly...
 
 # Build stage
 FROM base AS builder
 WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
+# Copy workspace structure and dependencies
+COPY --from=deps /app ./
+# Copy all source files
+COPY pnpm-workspace.yaml package.json pnpm-lock.yaml ./
+COPY packages ./packages
+COPY demo/corsair-fly ./demo/corsair-fly
 
 # Set environment variables for build
 ENV NEXT_TELEMETRY_DISABLED=1
 ENV NODE_ENV=production
 
 # Build the application
-RUN npm run build
+WORKDIR /app/demo/corsair-fly
+RUN pnpm run build
 
 # Runner stage
 FROM base AS runner
@@ -35,10 +44,10 @@ ENV NEXT_TELEMETRY_DISABLED=1
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-# Copy built application
-COPY --from=builder /app/public ./public
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+# Copy built application from the workspace build
+COPY --from=builder /app/demo/corsair-fly/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/demo/corsair-fly/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/demo/corsair-fly/.next/static ./demo/corsair-fly/.next/static
 
 USER nextjs
 
@@ -47,4 +56,4 @@ EXPOSE 3000
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
-CMD ["node", "server.js"]
+CMD ["node", "demo/corsair-fly/server.js"]
