--- a/demo/corsair-fly/fly.toml
+++ b/demo/corsair-fly/fly.toml
@@ -3,11 +3,10 @@ primary_region = 'sjc'
 
 # NOTE: This app is part of a pnpm workspace monorepo
 # Deploy from the monorepo root with:
-# fly deploy --config demo/corsair-fly/fly.toml --dockerfile demo/corsair-fly/Dockerfile
+# cd /path/to/corsair && fly deploy --config demo/corsair-fly/fly.toml
 
 [build]
-  dockerfile = "demo/corsair-fly/Dockerfile"
-  ignorefile = "demo/corsair-fly/.dockerignore"
+  dockerfile = "Dockerfile.fly"
 
 [http_service]
   internal_port = 3000
