updating webhook types, uuid generation, and main webhook route in next.js

--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -78,6 +78,7 @@
     "ind": "tsx index.ts"
   },
   "dependencies": {
+    "uuid": "^13.0.0",
     "zod": "^3.25.76"
   },
   "peerDependencies": {
