cli setup process

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.28.6",
     "@babel/preset-react": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
+    "@clack/prompts": "^1.0.0",
     "c12": "^3.3.3",
     "corsair": "workspace:*",
     "zod": "^3.25.76"
